--- a/prepros-6.config
+++ b/prepros-6.config
@@ -1,17 +1,17 @@
 {
-  "name": "SitioPublico 2",
+  "name": "MegaCentro-Zac",
   "firstRun": false,
   "exportConfig": true,
   "fileConfigs": [
     {
       "path": "sass/main.scss",
-      "configJson": "{\"forceCompile\":false,\"customOutput\":\"css/main.css\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
+      "configJson": "{\"forceCompile\":false,\"customOutput\":\"\",\"autoCompile\":true,\"sourceMap\":true,\"compiler-node-sass\":{\"enabled\":true,\"outputStyle\":\"nested\"},\"compiler-autoprefixer\":{\"enabled\":true},\"compiler-minify-css\":{\"enabled\":false}}"
     }
   ],
   "fileTree": {
     "expandedDirs": [
       "sass",
-      "css"
+      "scripts"
     ],
     "hideSystemFiles": true,
     "systemFiles": [
@@ -27,23 +27,12 @@
   },
   "imports": [
     {
-      "path": "sass/styles.scss",
+      "path": "sass/-bussi.scss",
       "imports": [
         "sass/_fonts.scss",
-        "sass/_normalize.scss"
-      ]
-    },
-    {
-      "path": "sass/styles_minetras.scss",
-      "imports": [
-        "sass/_fonts.scss",
-        "sass/_normalize.scss"
-      ]
-    },
-    {
-      "path": "sass/settings.scss",
-      "imports": [
-        "sass/_fonts.scss"
+        "sass/_normalize.scss",
+        "sass/settings.scss",
+        "sass/button.scss"
       ]
     },
     {
@@ -63,12 +52,9 @@
       ]
     },
     {
-      "path": "sass/-bussi.scss",
+      "path": "sass/settings.scss",
       "imports": [
-        "sass/_fonts.scss",
-        "sass/_normalize.scss",
-        "sass/settings.scss",
-        "sass/button.scss"
+        "sass/_fonts.scss"
       ]
     }
   ],
@@ -114,7 +100,7 @@
     "wp-includes"
   ],
   "server": {
-    "port": 7879,
+    "port": 7880,
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
@@ -123,7 +109,7 @@
     }
   },
   "browser-sync": {
-    "enable": true,
+    "enable": false,
     "clicks": true,
     "forms": true,
     "scroll": true
@@ -198,6 +184,7 @@
   "file-type-livescript": "{\"compilers\":[\"livescript\",\"uglify-js\"]}",
   "file-type-kit": "{\"compilers\":[\"kit\"]}",
   "uglify-js": {
+    "ie8": false,
     "compress": {
       "sequences": true,
       "properties": true,
@@ -205,40 +192,54 @@
       "drop_debugger": true,
       "unsafe": false,
       "unsafe_comps": false,
+      "unsafe_math": false,
+      "unsafe_proto": false,
+      "unsafe_regexp": false,
       "conditionals": true,
       "comparisons": true,
       "evaluate": true,
       "booleans": true,
       "loops": true,
       "unused": true,
+      "toplevel": false,
+      "top_retain": "",
       "hoist_funs": true,
-      "keep_fargs": false,
       "hoist_vars": false,
       "if_return": true,
       "join_vars": true,
       "cascade": true,
-      "side_effects": true,
-      "pure_getters": false,
+      "collapse_vars": true,
+      "reduce_vars": true,
+      "warnings": true,
       "negate_iife": true,
-      "screw_ie8": false,
-      "drop_console": false,
-      "angular": false,
-      "warnings": false,
+      "pure_getters": false,
       "pure_funcs": [],
+      "drop_console": false,
+      "expression": false,
+      "keep_fargs": true,
+      "keep_fnames": false,
+      "passes": 1,
+      "keep_infinity": false,
+      "side_effects": true,
       "global_defs": []
     },
     "output": {
-      "quote_keys": false,
-      "space_colon": true,
       "ascii_only": false,
-      "unescape_regexps": false,
-      "inline_script": false,
-      "beautify": false,
+      "beautify": true,
       "bracketize": false,
-      "semicolons": true,
-      "comments": false,
+      "comments": "",
+      "indent_level": 4,
+      "indent_start": 0,
+      "inline_script": false,
+      "keep_quoted_props": false,
+      "max_line_len": false,
+      "preamble": "",
       "preserve_line": false,
-      "screw_ie8": false
+      "quote_keys": false,
+      "quote_style": 0,
+      "semicolons": true,
+      "shebang": true,
+      "width": 80
     }
   },
   "cssnext": {
